--- a/package.json
+++ b/package.json
@@ -22,20 +22,23 @@
   "author": "Stewart Anderson",
   "license": "GPL-3.0",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "jest": "^22.4.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^22.4.4",
     "regenerator-runtime": "^0.11.1",
-    "webpack": "^3.11.0"
+    "webpack": "^3.12.0"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.11"
   },
   "files": [
     "build"
-  ]
+  ],
+  "jest": {
+    "testURL": "http://localhost"
+  }
 }
