--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
   publish:
     needs: [build]
-    if: contains(github.ref, "release")
+    if: contains(github.ref, 'release')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
