--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Publish
-      if: contains(github.ref, 'release')
+      if: startsWith(github.ref, 'refs/tags/')
       run: npm publish
