--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,4 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
-      run: npm publish
+      run: yarn publish
