--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,3 +35,5 @@ jobs:
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
       run: yarn publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
