--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,6 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
-      run: yarn publish
+      run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
