--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "immutable-replace",
-  "version": "1.1.16",
+  "version": "1.1.17-0",
   "description": "Returns a result with the matching objects replaced recursively",
   "repository": {
     "type": "git",
